--- a/pro-so/public/index.html
+++ b/pro-so/public/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>ProSo Notes</title>
+    <link rel="stylesheet" href="./style/style.css">
+    <title>ProSo Tools</title>
   </head>
   <body>
     <div class="container"></div>
